@@ -772,6 +772,7 @@ following image formats are supported:
 @item IBM Ultimotion         @tab     @tab  X @tab fourcc: ULTI
 @item Miro VideoXL           @tab     @tab  X @tab fourcc: VIXL
 @item QPEG                   @tab     @tab  X @tab fourccs: QPEG, Q1.0, Q1.1
+@item LOCO                   @tab     @tab  X @tab 
 @end multitable
 
 @code{X} means that the encoding (resp. decoding) is supported.
